--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "react-select": "^5.10.0",
+    "redux-persist": "^6.0.0",
     "reselect": "^5.1.1",
     "yup": "^1.6.1"
   },
