--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-select": "^5.10.0",
+    "react-spinners": "^0.15.0",
     "redux-persist": "^6.0.0",
     "reselect": "^5.1.1",
     "yup": "^1.6.1"
